<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  MountyHall DLA Notifier
  $Id$
  $HeadURL$
  %%
  Copyright (C) 2012 - 2013 Zoumbox.org
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
  -->


<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:mhapp="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/action_play"
        android:icon="@drawable/play"
        android:title="@string/play"
        mhapp:showAsAction="ifRoom|withText"/>

  <item android:id="@+id/action_refresh"
        android:icon="@drawable/action_refresh"
        android:title="@string/refresh"
        mhapp:showAsAction="ifRoom"/>

  <item android:id="@+id/action_preferences"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/preferences"/>

  <item android:id="@+id/action_register"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/register"/>

  <item android:id="@+id/action_qr_code_market"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/qr_code_market"/>

  <item android:id="@+id/action_credits"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/credits"/>

</menu>
