<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  MountyHall DLA Notifier
  $Id$
  $HeadURL$
  %%
  Copyright (C) 2012 - 2013 Zoumbox.org
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              style="@style/Main" android:id="@+id/details">


  <!-- REG -->
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DL">

    <TextView android:text="@string/REG"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/DT"/>
    <TextView android:id="@+id/REG"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_weight="1"
              style="@style/DD"/>

  </LinearLayout>

  <!-- ATT -->
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DL">

    <TextView android:text="@string/ATT"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/DT"/>
    <TextView android:id="@+id/ATT"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_weight="1"
              style="@style/DD"/>

  </LinearLayout>

  <!-- ESQ -->
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DL">

    <TextView android:text="@string/ESQ"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/DT"/>
    <TextView android:id="@+id/ESQ"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_weight="1"
              style="@style/DD"/>

  </LinearLayout>

  <!-- DEG -->
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DL">

    <TextView android:text="@string/DEG"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/DT"/>
    <TextView android:id="@+id/DEG"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_weight="1"
              style="@style/DD"/>

  </LinearLayout>

  <!-- ARM -->
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DL">

    <TextView android:text="@string/ARM"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/DT"/>
    <TextView android:id="@+id/ARM"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_weight="1"
              style="@style/DD"/>

  </LinearLayout>

  <!-- RM -->
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DL">

    <TextView android:text="@string/RM"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/DT"/>
    <TextView android:id="@+id/RM"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_weight="1"
              style="@style/DD"/>

  </LinearLayout>

  <!-- MM -->
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/DL">

    <TextView android:text="@string/MM"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/DT"/>
    <TextView android:id="@+id/MM"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_weight="1"
              style="@style/DD"/>

  </LinearLayout>

</LinearLayout>
