<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  MountyHall-DLA-Notifier
  
  $Id$
  $HeadURL$
  %%
  Copyright (C) 2012 Zoumbox.org
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  style="@style/Main">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="300px"
                      android:orientation="horizontal"
                      android:gravity="center_horizontal">
            <ImageView android:id="@+id/blason"
                       android:orientation="vertical"
                       android:layout_height="300px"
                       android:layout_width="300px"
                       android:scaleType="fitXY"
                    />
        </LinearLayout>

        <TextView android:id="@+id/name"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:gravity="center_horizontal"
                  style="@style/Header"/>

        <TextView android:text="@string/pvs"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/DT"/>
        <TextView android:id="@+id/pvs"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  style="@style/DD"/>

        <TextView android:text="@string/position"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/DT"/>
        <TextView android:id="@+id/position"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  style="@style/DD"/>

        <TextView android:text="@string/kd"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/DT"/>
        <TextView android:id="@+id/kd"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  style="@style/DD"/>

        <TextView android:text="@string/dla"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/DT"/>
        <TextView android:id="@+id/dla_field"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  style="@style/DD"/>

        <TextView android:text="@string/remaining_pas"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/DT"/>
        <TextView android:id="@+id/pas"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  style="@style/DD"/>

        <Button android:id="@+id/play"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Buttons"
                android:text="@string/play"
                android:onClick="onPlayButtonClicked"/>

    </LinearLayout>
</ScrollView>