<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  MountyHall DLA Notifier
  $Id$
  $HeadURL$
  %%
  Copyright (C) 2012 - 2013 Zoumbox.org
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <TextView android:text="@string/troll_number"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>
    <EditText android:id="@+id/troll"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>

    <TextView android:text="@string/password"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>
    <EditText android:id="@+id/password"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:password="true"
            />
    <TextView android:text="@string/password_info"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:textStyle="italic"/>

    <Button android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Buttons"
            android:text="@string/save"
            android:onClick="onSaveButtonClicked"/>

</LinearLayout>
