<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  MountyHall DLA Notifier
  $Id$
  $HeadURL$
  %%
  Copyright (C) 2012 - 2013 Zoumbox.org
  %%
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as
  published by the Free Software Foundation, either version 3 of the 
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public 
  License along with this program.  If not, see
  <http://www.gnu.org/licenses/gpl-3.0.html>.
  #L%
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:padding="2px" android:layout_width="fill_parent"
              android:layout_height="wrap_content" android:background="#000000">

    <LinearLayout android:orientation="vertical" android:padding="10dip" android:layout_width="fill_parent"
                  android:layout_height="fill_parent" android:background="#eeeeee">

        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                      android:layout_height="wrap_content" android:layout_marginBottom="5dip">
            <ImageView android:layout_width="256px" android:layout_height="256px"
                       android:src="@drawable/trarnoll_256" android:scaleType="fitXY"/>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:layout_marginTop="10dip"
                          android:layout_marginLeft="20dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:text="@string/version_full" android:textStyle="italic" android:textColor="#444444"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                      android:layout_height="wrap_content" android:layout_marginTop="5dip"
                      android:layout_marginLeft="15dip">
            <ImageView android:layout_width="80px" android:layout_height="80px"
                       android:scaleType="fitXY" android:src="@drawable/arno"/>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:layout_marginLeft="10dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Arno"
                          android:textColor="#444444"/>
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:text="@string/credits_leader" android:textColor="#444444" android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                      android:layout_height="wrap_content" android:layout_marginTop="5dip"
                      android:layout_marginLeft="15dip">
            <ImageView android:layout_width="80px" android:layout_height="80px"
                       android:scaleType="fitXY" android:src="@drawable/ic_contact_picture"/>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:layout_marginLeft="10dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Maxime"
                          android:textColor="#444444"/>
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:text="@string/credits_illustrator" android:textColor="#444444"
                          android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                      android:layout_height="wrap_content" android:layout_marginTop="5dip"
                      android:layout_marginLeft="15dip">
            <ImageView android:layout_width="80px" android:layout_height="80px"
                       android:scaleType="fitXY" android:src="@drawable/ic_contact_picture"/>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
                          android:layout_height="wrap_content" android:layout_marginLeft="10dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="omnipotente"
                          android:textColor="#444444"/>
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                          android:text="@string/credits_contributor" android:textColor="#444444"
                          android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>

        <Button android:id="@+id/credits_close" android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:text="@string/close" android:layout_marginTop="10dip"/>

    </LinearLayout>

</LinearLayout>
